src/App.css
.action-button {
    cursor: pointer;
  font-size: 24px;
}

.action-buttons {
    width: 60%;
}

.add-property-btn {
    background-color: #8BC34A;
    border: 1px solid #77ac39;
}

.add-property-btn:hover {
    background-color: #77ac39;
    border: 1px solid #5c862d;
}

.animation-property {
    /*darker*/
    border-bottom: 1px solid #000;
    /*lighter*/
    border-top: 1px solid #373737;
    padding: 15px;
}

aside.sidebar {
    background-color: #212121;
    border-top: 1px solid #fff;
    border-radius: 5px;
    color: #fff;
    grid-column: 3;
    grid-row: 1 / span 3;
    height: 100vh;
    overflow: scroll;
}

body {
    font-family: 'Roboto', sans-serif;
}

.code {
    background-color: #8BC34A;
    cursor: pointer;
    padding: 20px 10px;
}

.code-section {
    width: 30%;
}

.color-bar {
    background-color: #8BC34A;
    cursor: pointer;
    height: 100%;
    position: absolute;
    width: 1px;
    z-index: 1;
}

#demo {
    background-color: #000;
    position: relative;
    height: 100px;
    width: 100px;
}

.el {
    background-color: #000;
    position: relative;
    height: 100px;
    width: 100px;
}

.element-sidebar {
    background-color: #212121;
    border-bottom: 1px solid #fff;
    border-top: 1px solid #fff;
    color: #fff;
    grid-column: 1;
    grid-row: 1 / span 2;
    height: 100vh;
    overflow-y: scroll;
}

.element-sidebar-inner {
    padding: 15px;
}

.embed-code {
    background-color: #424242;
    color: #fff;
    height: 200px;
    overflow: scroll;
    padding: 15px;
    position: absolute;
    right: 0;
    top: 20px;
    width: 300px;
}

.flex {
    display: flex;
}

header.editor-header {
    background-color: #212121;
    color: #fff;
    display: flex;
    height: 50px;
}

header.site-header {
    background-color: #555;
    color: #fff;
    height: 100px;
}

.header-padding {
    padding-top: 10px;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

.input-label {
    padding-top: 5px;
    padding-right: 10px;
}

.input-number {
    background-color: #080808;
    border: 0;
    color: #fff;
    width: 50px
}

.keyframes {
    background-color: #212121;
    bottom: 0;
    color: #fff;
    grid-column: 1;
    grid-row: 3;
    height: 200px;
    position: absolute;
    width: 200px;
    z-index: 9999;
}

.keyframe-bar {
    //background-color: red;
    cursor: pointer;
    height: 100%;
    position: absolute;
    width: 1px;
    z-index: 1;
}

.keyframe-diamond {
    color: #FAFAFA;
    font-size: 12px;
    margin-left: -3px;
    margin-top: 5px;
}

.keyframe-diamond:first-of-type {
    margin-top: 15px;
}


.logo {
    background-color: #8BC34A;
    display: inline-block;
    font-size: 24px;
    height: 100%;
    padding: 5px;
}

.logo-section {
    width: 30%;
}

.main {
    float: left;
    grid-column: 2;
    grid-row: 1;
}

.properties-title {
    background-color: #181818;
    padding: 5px;
}

.relative {
    position: relative;
}

.rotation-input {
    flex-grow: 1;
}

section.intro {
    background-color: #333;
}

.timeline {
    background-color: #212121;
    bottom: 0;
    grid-column: 2;
    grid-row: 3;
    height: 200px;
    overflow: scroll;
    //overflow-y: hidden;
    position: absolute;
}

.timeline-frame {
    height: 100%;
    position: absolute;
    width: 1px;
}

.timeline-frame-bar {
    //background-color: #dcdcdc;
    background-color: #FAFAFA;
    height: 100%;
    width: 1px;
}

.timeline-grey-bar {
    //background-color: #666;
    background-color: #FAFAFA;
    height: 100%;
    position: absolute;
    width: 1px;
}

.timeline-inner {
    height: 100%;
    left: 15px;
    position: relative;
    width: 100%;
}

.timeline-time {
    color: #FAFAFA;
    padding-left: 5px;
    position: absolute;
}

ul.site-nav li a {
    color: #fff;
}

.wrapper {
    display: grid;
    grid-template-columns: 200px 1fr 200px;
    grid-template-rows: 100% 1fr 100%;
}

